 * Upgrade jackson to 2.15.3 and snakeyaml to 2.1 (CASSANDRA-18875)
 * Transactional Cluster Metadata [CEP-21] (CASSANDRA-18330)
 * Add ELAPSED command to cqlsh (CASSANDRA-18861)
 * Add the ability to disable bulk loading of SSTables (CASSANDRA-18781)
 * Clean up obsolete functions and simplify cql_version handling in cqlsh (CASSANDRA-18787)
Merged from 5.0:
 * Deprecate Python 3.7 and earlier, but allow cqlsh to run with Python 3.6-3.11 (CASSANDRA-19467)
 * Set uuid_sstable_identifiers_enabled to true in cassandra-latest.yaml (CASSANDRA-19460)
 * Revert switching to approxTime in Dispatcher (CASSANDRA-19454)
 * Add an optimized default configuration to tests and make it available for new users (CASSANDRA-18753)
 * Fix remote JMX under Java17 (CASSANDRA-19453)
 * Avoid consistency violations for SAI intersections over unrepaired data at consistency levels requiring reconciliation (CASSANDRA-19018)
 * Fix NullPointerException in ANN+WHERE when adding rows in another partition (CASSANDRA-19404)
 * Record latencies for SAI post-filtering reads against local storage (CASSANDRA-18940)
 * Fix VectorMemoryIndex#update logic to compare vectors. Fix Index view (CASSANDRA-19168)
 * Deprecate native_transport_port_ssl (CASSANDRA-19392)
 * Update packaging shell includes (CASSANDRA-19283)
 * Fix data corruption in VectorCodec when using heap buffers (CASSANDRA-19167)
 * Avoid over-skipping of key iterators from static column indexes during mixed intersections (CASSANDRA-19278)
 * Make concurrent_index_builders configurable at runtime (CASSANDRA-19266)
 * Fix storage_compatibility_mode for streaming (CASSANDRA-19126)
 * Add support of vector type to cqlsh COPY command (CASSANDRA-19118)
 * Make CQLSSTableWriter to support building of SAI indexes (CASSANDRA-18714)
 * Append additional JVM options when using JDK17+ (CASSANDRA-19001)
 * Upgrade Python driver to 3.29.0 (CASSANDRA-19245)